FIX: Fixing issues with the contrast of color between background and text in movile view ports in specific devices

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,21 +3,28 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: 255 255 255;
+  --foreground: 23 23 23;
+  --primary: 31 58 147;
+  --secondary: 28 214 230;
+  --accent: 255 109 0;
+  --neutral-light: 245 245 245;
+  --neutral-dark: 44 44 44;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: 10 10 10;
+    --foreground: 237 237 237;
+    --neutral-light: 38 38 38;
+    --neutral-dark: 200 200 200;
   }
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(var(--foreground));
+  background: rgb(var(--background));
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
 @layer utilities {
